Fixed z-indexes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ body {
 	background-color: #ffffff;
 	margin-top: 130px;
 	border: 1px solid #EEEEEE;
-	z-index: -2;
+	z-index: 1;
 }
 
 .sidebar_container {
@@ -130,7 +130,7 @@ body {
 	width: 270px;
 	background-color: #ffffff;
 	border: 1px solid #EEEEEE;
-	z-index: -3;
+	z-index: 2;
 }
 
 .sidebar_title_container {
